change api documentation
